FIxing width responsiveness on mobile

--- a/portfolio2/src/index.css
+++ b/portfolio2/src/index.css
@@ -114,3 +114,7 @@
 .animate-fullViewCarousel:hover {
   animation-play-state: paused;
 }
+
+body {
+  overflow-x: hidden;
+}
